--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,18 +22,34 @@ jobs:
     runs-on: ubuntu-24.04
     outputs:
       current-version: ${{ steps.version.outputs.current-version }}
-      new-version: ${{ steps.version.outputs.new-version }}
+      has-version-changed: ${{ steps.version.outputs.has-version-changed }}
       version-major: ${{ steps.version.outputs.version-major }}
       version-minor: ${{ steps.version.outputs.version-minor }}
       version-patch: ${{ steps.version.outputs.version-patch }}
     steps:
     - uses: actions/checkout@v5
-    - name: Get and increment version
+      with:
+        fetch-depth: 0  # Need full history to compare with previous commit
+    - name: Get current version and check if changed
       id: version
       run: |
         # Extract current version from main.cpp
         CURRENT_VERSION=$(grep 'setApplicationVersion' main.cpp | sed 's/.*"\(.*\)".*/\1/')
         echo "Current version: $CURRENT_VERSION"
+        
+        # Get version from previous commit (if exists)
+        PREVIOUS_VERSION=$(git show HEAD~1:main.cpp 2>/dev/null | grep 'setApplicationVersion' | sed 's/.*"\(.*\)".*/\1/' || echo "")
+        
+        if [ -n "$PREVIOUS_VERSION" ] && [ "$PREVIOUS_VERSION" != "$CURRENT_VERSION" ]; then
+          echo "Version changed from $PREVIOUS_VERSION to $CURRENT_VERSION"
+          echo "has-version-changed=true" >> $GITHUB_OUTPUT
+        elif [ -z "$PREVIOUS_VERSION" ]; then
+          echo "No previous version found, treating as new version"
+          echo "has-version-changed=true" >> $GITHUB_OUTPUT
+        else
+          echo "Version unchanged: $CURRENT_VERSION"
+          echo "has-version-changed=false" >> $GITHUB_OUTPUT
+        fi
         
         # Parse version components
         IFS='.' read -ra VERSION_PARTS <<< "$CURRENT_VERSION"
@@ -41,41 +57,20 @@ jobs:
         MINOR=${VERSION_PARTS[1]}
         PATCH=${VERSION_PARTS[2]}
         
-        # Increment patch number
-        NEW_PATCH=$((PATCH + 1))
-        NEW_VERSION="$MAJOR.$MINOR.$NEW_PATCH"
-        
         echo "version-major=$MAJOR" >> $GITHUB_OUTPUT
         echo "version-minor=$MINOR" >> $GITHUB_OUTPUT
-        echo "version-patch=$NEW_PATCH" >> $GITHUB_OUTPUT
+        echo "version-patch=$PATCH" >> $GITHUB_OUTPUT
         echo "current-version=$CURRENT_VERSION" >> $GITHUB_OUTPUT
-        echo "new-version=$NEW_VERSION" >> $GITHUB_OUTPUT
-        
-        echo "New version will be: $NEW_VERSION"
-        
-    - name: Update version in source
-      run: |
-        # Update version in main.cpp
-        sed -i 's/setApplicationVersion("[^"]*")/setApplicationVersion("${{ steps.version.outputs.new-version }}")/' main.cpp
-        
-        # Update version in chonkylauncher.cpp
-        sed -i 's/m_currentVersion("[^"]*")/m_currentVersion("${{ steps.version.outputs.new-version }}")/' chonkylauncher.cpp
-        
-        # Commit version change
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
-        git add main.cpp chonkylauncher.cpp
-        git commit -m "Bump version to ${{ steps.version.outputs.new-version }}"
-        git push
 
   get-info:
     runs-on: ubuntu-24.04
     needs: get-version
+    if: needs.get-version.outputs.has-version-changed == 'true'
     outputs:
       date: ${{ steps.vars.outputs.date }}
       shorthash: ${{ steps.vars.outputs.shorthash }}
       fullhash: ${{ steps.vars.outputs.fullhash }}
-      version: ${{ needs.get-version.outputs.new-version }}
+      version: ${{ needs.get-version.outputs.current-version }}
     steps:
     - uses: actions/checkout@v5
     - name: Get date and git hash
@@ -87,11 +82,11 @@ jobs:
         echo "date=$(date +'%Y-%m-%d')" >> $GITHUB_OUTPUT
         echo "shorthash=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
         echo "fullhash=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
-        echo "version=${{ needs.get-version.outputs.new-version }}" >> $GITHUB_OUTPUT
+        echo "version=${{ needs.get-version.outputs.current-version }}" >> $GITHUB_OUTPUT
 
-  windows:
+  build-windows:
     runs-on: windows-2025
-    needs: [get-version, get-info]
+    needs: get-version
     steps:
     - uses: actions/checkout@v5
 
@@ -151,8 +146,8 @@ jobs:
         path: ChonkyLauncher-Windows.zip
 
   release:
-    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-    needs: [get-version, get-info, windows]
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main' && needs.get-version.outputs.has-version-changed == 'true'
+    needs: [get-version, get-info, build-windows]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v5
@@ -182,8 +177,9 @@ jobs:
           echo "No previous release found"
           echo "commits<<EOF" >> $GITHUB_OUTPUT
           echo "- Initial release setup" >> $GITHUB_OUTPUT
-          echo "- Auto-versioning system implemented" >> $GITHUB_OUTPUT
-          echo "- Enhanced auto-updater with release ID tracking" >> $GITHUB_OUTPUT
+          echo "- Manual version control system implemented" >> $GITHUB_OUTPUT
+          echo "- Enhanced gamepad support with joystick fallback" >> $GITHUB_OUTPUT
+          echo "- Guide button hold mechanism for GUI control during gameplay" >> $GITHUB_OUTPUT
           echo "EOF" >> $GITHUB_OUTPUT
         fi
 
@@ -192,10 +188,10 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        name: "ChonkyLauncher ${{ needs.get-version.outputs.new-version }}"
-        tag: "v${{ needs.get-version.outputs.new-version }}"
+        name: "ChonkyLauncher ${{ needs.get-version.outputs.current-version }}"
+        tag: "v${{ needs.get-version.outputs.current-version }}"
         body: |
-          ## ChonkyStation GUI Launcher Release ${{ needs.get-version.outputs.new-version }}
+          ## ChonkyStation GUI Launcher Release ${{ needs.get-version.outputs.current-version }}
           
           **Commit:** ${{ needs.get-info.outputs.fullhash }}
           
@@ -206,7 +202,7 @@ jobs:
           `ChonkyLauncher-Windows.zip`
           
           ---
-          **Version bumped from ${{ needs.get-version.outputs.current-version }} to ${{ needs.get-version.outputs.new-version }}**
+          **Manual version bump detected**
         artifacts: ChonkyLauncher-Windows.zip
         prerelease: false
         draft: false
